qt6/gen_qstyleoption.nim


proc fcQStyleOption_new(): ptr cQStyleOption {.importc: "QStyleOption_new".}
proc fcQStyleOption_new2(other: pointer): ptr cQStyleOption {.importc: "QStyleOption_new2".}
proc fcQStyleOption_new3(version: cint): ptr cQStyleOption {.importc: "QStyleOption_new3".}
proc fcQStyleOption_new4(version: cint, typeVal: cint): ptr cQStyleOption {.importc: "QStyleOption_new4".}
proc fcQStyleOption_initFrom(self: pointer, w: pointer): void {.importc: "QStyleOption_initFrom".}
proc fcQStyleOption_operatorAssign(self: pointer, other: pointer): void {.importc: "QStyleOption_operatorAssign".}
proc fcQStyleOption_delete(self: pointer) {.importc: "QStyleOption_delete".}
proc fcQStyleOptionFocusRect_new(): ptr cQStyleOptionFocusRect {.importc: "QStyleOptionFocusRect_new".}
proc fcQStyleOptionFocusRect_new2(other: pointer): ptr cQStyleOptionFocusRect {.importc: "QStyleOptionFocusRect_new2".}
proc fcQStyleOptionFocusRect_delete(self: pointer) {.importc: "QStyleOptionFocusRect_delete".}
proc fcQStyleOptionFrame_new(): ptr cQStyleOptionFrame {.importc: "QStyleOptionFrame_new".}
proc fcQStyleOptionFrame_new2(other: pointer): ptr cQStyleOptionFrame {.importc: "QStyleOptionFrame_new2".}
proc fcQStyleOptionFrame_delete(self: pointer) {.importc: "QStyleOptionFrame_delete".}
proc fcQStyleOptionTabWidgetFrame_new(): ptr cQStyleOptionTabWidgetFrame {.importc: "QStyleOptionTabWidgetFrame_new".}
proc fcQStyleOptionTabWidgetFrame_new2(other: pointer): ptr cQStyleOptionTabWidgetFrame {.importc: "QStyleOptionTabWidgetFrame_new2".}
proc fcQStyleOptionTabWidgetFrame_delete(self: pointer) {.importc: "QStyleOptionTabWidgetFrame_delete".}
proc fcQStyleOptionTabBarBase_new(): ptr cQStyleOptionTabBarBase {.importc: "QStyleOptionTabBarBase_new".}
proc fcQStyleOptionTabBarBase_new2(other: pointer): ptr cQStyleOptionTabBarBase {.importc: "QStyleOptionTabBarBase_new2".}
proc fcQStyleOptionTabBarBase_delete(self: pointer) {.importc: "QStyleOptionTabBarBase_delete".}
proc fcQStyleOptionHeader_new(): ptr cQStyleOptionHeader {.importc: "QStyleOptionHeader_new".}
proc fcQStyleOptionHeader_new2(other: pointer): ptr cQStyleOptionHeader {.importc: "QStyleOptionHeader_new2".}
proc fcQStyleOptionHeader_delete(self: pointer) {.importc: "QStyleOptionHeader_delete".}
proc fcQStyleOptionHeaderV2_new(): ptr cQStyleOptionHeaderV2 {.importc: "QStyleOptionHeaderV2_new".}
proc fcQStyleOptionHeaderV2_new2(other: pointer): ptr cQStyleOptionHeaderV2 {.importc: "QStyleOptionHeaderV2_new2".}
proc fcQStyleOptionHeaderV2_delete(self: pointer) {.importc: "QStyleOptionHeaderV2_delete".}
proc fcQStyleOptionButton_new(): ptr cQStyleOptionButton {.importc: "QStyleOptionButton_new".}
proc fcQStyleOptionButton_new2(other: pointer): ptr cQStyleOptionButton {.importc: "QStyleOptionButton_new2".}
proc fcQStyleOptionButton_delete(self: pointer) {.importc: "QStyleOptionButton_delete".}
proc fcQStyleOptionTab_new(): ptr cQStyleOptionTab {.importc: "QStyleOptionTab_new".}
proc fcQStyleOptionTab_new2(other: pointer): ptr cQStyleOptionTab {.importc: "QStyleOptionTab_new2".}
proc fcQStyleOptionTab_delete(self: pointer) {.importc: "QStyleOptionTab_delete".}
proc fcQStyleOptionToolBar_new(): ptr cQStyleOptionToolBar {.importc: "QStyleOptionToolBar_new".}
proc fcQStyleOptionToolBar_new2(other: pointer): ptr cQStyleOptionToolBar {.importc: "QStyleOptionToolBar_new2".}
proc fcQStyleOptionToolBar_delete(self: pointer) {.importc: "QStyleOptionToolBar_delete".}
proc fcQStyleOptionProgressBar_new(): ptr cQStyleOptionProgressBar {.importc: "QStyleOptionProgressBar_new".}
proc fcQStyleOptionProgressBar_new2(other: pointer): ptr cQStyleOptionProgressBar {.importc: "QStyleOptionProgressBar_new2".}
proc fcQStyleOptionProgressBar_delete(self: pointer) {.importc: "QStyleOptionProgressBar_delete".}
proc fcQStyleOptionMenuItem_new(): ptr cQStyleOptionMenuItem {.importc: "QStyleOptionMenuItem_new".}
proc fcQStyleOptionMenuItem_new2(other: pointer): ptr cQStyleOptionMenuItem {.importc: "QStyleOptionMenuItem_new2".}
proc fcQStyleOptionMenuItem_delete(self: pointer) {.importc: "QStyleOptionMenuItem_delete".}
proc fcQStyleOptionDockWidget_new(): ptr cQStyleOptionDockWidget {.importc: "QStyleOptionDockWidget_new".}
proc fcQStyleOptionDockWidget_new2(other: pointer): ptr cQStyleOptionDockWidget {.importc: "QStyleOptionDockWidget_new2".}
proc fcQStyleOptionDockWidget_delete(self: pointer) {.importc: "QStyleOptionDockWidget_delete".}
proc fcQStyleOptionViewItem_new(): ptr cQStyleOptionViewItem {.importc: "QStyleOptionViewItem_new".}
proc fcQStyleOptionViewItem_new2(other: pointer): ptr cQStyleOptionViewItem {.importc: "QStyleOptionViewItem_new2".}
proc fcQStyleOptionViewItem_delete(self: pointer) {.importc: "QStyleOptionViewItem_delete".}
proc fcQStyleOptionToolBox_new(): ptr cQStyleOptionToolBox {.importc: "QStyleOptionToolBox_new".}
proc fcQStyleOptionToolBox_new2(other: pointer): ptr cQStyleOptionToolBox {.importc: "QStyleOptionToolBox_new2".}
proc fcQStyleOptionToolBox_delete(self: pointer) {.importc: "QStyleOptionToolBox_delete".}
proc fcQStyleOptionRubberBand_new(): ptr cQStyleOptionRubberBand {.importc: "QStyleOptionRubberBand_new".}
proc fcQStyleOptionRubberBand_new2(other: pointer): ptr cQStyleOptionRubberBand {.importc: "QStyleOptionRubberBand_new2".}
proc fcQStyleOptionRubberBand_delete(self: pointer) {.importc: "QStyleOptionRubberBand_delete".}
proc fcQStyleOptionComplex_new(): ptr cQStyleOptionComplex {.importc: "QStyleOptionComplex_new".}
proc fcQStyleOptionComplex_new2(other: pointer): ptr cQStyleOptionComplex {.importc: "QStyleOptionComplex_new2".}
proc fcQStyleOptionComplex_new3(version: cint): ptr cQStyleOptionComplex {.importc: "QStyleOptionComplex_new3".}
proc fcQStyleOptionComplex_new4(version: cint, typeVal: cint): ptr cQStyleOptionComplex {.importc: "QStyleOptionComplex_new4".}
proc fcQStyleOptionComplex_delete(self: pointer) {.importc: "QStyleOptionComplex_delete".}
proc fcQStyleOptionSlider_new(): ptr cQStyleOptionSlider {.importc: "QStyleOptionSlider_new".}
proc fcQStyleOptionSlider_new2(other: pointer): ptr cQStyleOptionSlider {.importc: "QStyleOptionSlider_new2".}
proc fcQStyleOptionSlider_delete(self: pointer) {.importc: "QStyleOptionSlider_delete".}
proc fcQStyleOptionSpinBox_new(): ptr cQStyleOptionSpinBox {.importc: "QStyleOptionSpinBox_new".}
proc fcQStyleOptionSpinBox_new2(other: pointer): ptr cQStyleOptionSpinBox {.importc: "QStyleOptionSpinBox_new2".}
proc fcQStyleOptionSpinBox_delete(self: pointer) {.importc: "QStyleOptionSpinBox_delete".}
proc fcQStyleOptionToolButton_new(): ptr cQStyleOptionToolButton {.importc: "QStyleOptionToolButton_new".}
proc fcQStyleOptionToolButton_new2(other: pointer): ptr cQStyleOptionToolButton {.importc: "QStyleOptionToolButton_new2".}
proc fcQStyleOptionToolButton_delete(self: pointer) {.importc: "QStyleOptionToolButton_delete".}
proc fcQStyleOptionComboBox_new(): ptr cQStyleOptionComboBox {.importc: "QStyleOptionComboBox_new".}
proc fcQStyleOptionComboBox_new2(other: pointer): ptr cQStyleOptionComboBox {.importc: "QStyleOptionComboBox_new2".}
proc fcQStyleOptionComboBox_delete(self: pointer) {.importc: "QStyleOptionComboBox_delete".}
proc fcQStyleOptionTitleBar_new(): ptr cQStyleOptionTitleBar {.importc: "QStyleOptionTitleBar_new".}
proc fcQStyleOptionTitleBar_new2(other: pointer): ptr cQStyleOptionTitleBar {.importc: "QStyleOptionTitleBar_new2".}
proc fcQStyleOptionTitleBar_delete(self: pointer) {.importc: "QStyleOptionTitleBar_delete".}
proc fcQStyleOptionGroupBox_new(): ptr cQStyleOptionGroupBox {.importc: "QStyleOptionGroupBox_new".}
proc fcQStyleOptionGroupBox_new2(other: pointer): ptr cQStyleOptionGroupBox {.importc: "QStyleOptionGroupBox_new2".}
proc fcQStyleOptionGroupBox_delete(self: pointer) {.importc: "QStyleOptionGroupBox_delete".}
proc fcQStyleOptionSizeGrip_new(): ptr cQStyleOptionSizeGrip {.importc: "QStyleOptionSizeGrip_new".}
proc fcQStyleOptionSizeGrip_new2(other: pointer): ptr cQStyleOptionSizeGrip {.importc: "QStyleOptionSizeGrip_new2".}
proc fcQStyleOptionSizeGrip_delete(self: pointer) {.importc: "QStyleOptionSizeGrip_delete".}
proc fcQStyleOptionGraphicsItem_new(): ptr cQStyleOptionGraphicsItem {.importc: "QStyleOptionGraphicsItem_new".}
proc fcQStyleOptionGraphicsItem_new2(other: pointer): ptr cQStyleOptionGraphicsItem {.importc: "QStyleOptionGraphicsItem_new2".}
proc fcQStyleOptionGraphicsItem_levelOfDetailFromTransform(worldTransform: pointer): float64 {.importc: "QStyleOptionGraphicsItem_levelOfDetailFromTransform".}
proc fcQStyleOptionGraphicsItem_delete(self: pointer) {.importc: "QStyleOptionGraphicsItem_delete".}
proc fcQStyleHintReturn_new(): ptr cQStyleHintReturn {.importc: "QStyleHintReturn_new".}
proc fcQStyleHintReturn_new2(param1: pointer): ptr cQStyleHintReturn {.importc: "QStyleHintReturn_new2".}
proc fcQStyleHintReturn_new3(version: cint): ptr cQStyleHintReturn {.importc: "QStyleHintReturn_new3".}
proc fcQStyleHintReturn_new4(version: cint, typeVal: cint): ptr cQStyleHintReturn {.importc: "QStyleHintReturn_new4".}
proc fcQStyleHintReturn_operatorAssign(self: pointer, param1: pointer): void {.importc: "QStyleHintReturn_operatorAssign".}
proc fcQStyleHintReturn_delete(self: pointer) {.importc: "QStyleHintReturn_delete".}
proc fcQStyleHintReturnMask_new(): ptr cQStyleHintReturnMask {.importc: "QStyleHintReturnMask_new".}
proc fcQStyleHintReturnMask_new2(param1: pointer): ptr cQStyleHintReturnMask {.importc: "QStyleHintReturnMask_new2".}
proc fcQStyleHintReturnMask_operatorAssign(self: pointer, param1: pointer): void {.importc: "QStyleHintReturnMask_operatorAssign".}
proc fcQStyleHintReturnMask_delete(self: pointer) {.importc: "QStyleHintReturnMask_delete".}
proc fcQStyleHintReturnVariant_new(): ptr cQStyleHintReturnVariant {.importc: "QStyleHintReturnVariant_new".}
proc fcQStyleHintReturnVariant_new2(param1: pointer): ptr cQStyleHintReturnVariant {.importc: "QStyleHintReturnVariant_new2".}
proc fcQStyleHintReturnVariant_operatorAssign(self: pointer, param1: pointer): void {.importc: "QStyleHintReturnVariant_operatorAssign".}
proc fcQStyleHintReturnVariant_delete(self: pointer) {.importc: "QStyleHintReturnVariant_delete".}


func init*(T: type QStyleOption, h: ptr cQStyleOption): QStyleOption =
  T(h: h)
proc create*(T: type QStyleOption, ): QStyleOption =

  QStyleOption.init(fcQStyleOption_new())
proc create*(T: type QStyleOption, other: QStyleOption): QStyleOption =

  QStyleOption.init(fcQStyleOption_new2(other.h))
proc create*(T: type QStyleOption, version: cint): QStyleOption =

  QStyleOption.init(fcQStyleOption_new3(version))
proc create*(T: type QStyleOption, version: cint, typeVal: cint): QStyleOption =

  QStyleOption.init(fcQStyleOption_new4(version, typeVal))
proc initFrom*(self: QStyleOption, w: gen_qwidget.QWidget): void =

  fcQStyleOption_initFrom(self.h, w.h)

proc operatorAssign*(self: QStyleOption, other: QStyleOption): void =

  fcQStyleOption_operatorAssign(self.h, other.h)

proc delete*(self: QStyleOption) =
  fcQStyleOption_delete(self.h)

func init*(T: type QStyleOptionFocusRect, h: ptr cQStyleOptionFocusRect): QStyleOptionFocusRect =
  T(h: h)
proc create*(T: type QStyleOptionFocusRect, ): QStyleOptionFocusRect =

  QStyleOptionFocusRect.init(fcQStyleOptionFocusRect_new())
proc create*(T: type QStyleOptionFocusRect, other: QStyleOptionFocusRect): QStyleOptionFocusRect =

  QStyleOptionFocusRect.init(fcQStyleOptionFocusRect_new2(other.h))
proc delete*(self: QStyleOptionFocusRect) =
  fcQStyleOptionFocusRect_delete(self.h)

func init*(T: type QStyleOptionFrame, h: ptr cQStyleOptionFrame): QStyleOptionFrame =
  T(h: h)
proc create*(T: type QStyleOptionFrame, ): QStyleOptionFrame =

  QStyleOptionFrame.init(fcQStyleOptionFrame_new())
proc create*(T: type QStyleOptionFrame, other: QStyleOptionFrame): QStyleOptionFrame =

  QStyleOptionFrame.init(fcQStyleOptionFrame_new2(other.h))
proc delete*(self: QStyleOptionFrame) =
  fcQStyleOptionFrame_delete(self.h)
